--- a/Assignments/Assignments.csproj
+++ b/Assignments/Assignments.csproj
@@ -32,6 +32,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -67,18 +68,42 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assignment1-Q1.aspx" />
+    <Content Include="Assignment1.aspx" />
+    <Content Include="Assignments.aspx" />
     <Content Include="Web.config" />
+    <Content Include="Assignment1Q1.aspx" />
+    <Content Include="Assignment1Q2.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assignment1-Q1.aspx.cs">
-      <DependentUpon>Assignment1-Q1.aspx</DependentUpon>
+    <Compile Include="Assignment1.aspx.cs">
+      <DependentUpon>Assignment1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Assignment1-Q1.aspx.designer.cs">
-      <DependentUpon>Assignment1-Q1.aspx</DependentUpon>
+    <Compile Include="Assignment1.aspx.designer.cs">
+      <DependentUpon>Assignment1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Assignments.aspx.cs">
+      <DependentUpon>Assignments.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Assignments.aspx.designer.cs">
+      <DependentUpon>Assignments.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Assignment1Q1.aspx.cs">
+      <DependentUpon>Assignment1Q1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Assignment1Q1.aspx.designer.cs">
+      <DependentUpon>Assignment1Q1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Assignment1Q2.aspx.cs">
+      <DependentUpon>Assignment1Q2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Assignment1Q2.aspx.designer.cs">
+      <DependentUpon>Assignment1Q2.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
